# RDE

./: .gitignore  .gitmodules  .readthedocs.yaml  .vimspector.json  .vimspector.session  CMakeLists.patch  CMakeLists.txt  Changelog.md  LICENSE  RDE.10x  RDE.sublime-project  RDE.sublime-workspace  RDE_NoOPP.10x  README.md  SDLFullyWorkingExample  TODO.md  addModule.sh  build.py  build.sh  buildAndRun.sh  build_apple_shared.sh  build_apple_static.sh  build_linux_shared.sh  build_linux_static.sh  build_osx_shared.sh  build_osx_static.sh  build_windows.bat  builder  cmake-build-debug  compile_commands.json  config.rde_config  imgui.ini  main.cpp  main.h  manager.py  postLibraryBuildingProcess.sh  rde_build.c  setup.sh  setupSteamDeckDependencies.sh  valgrind.supp  (+4 more)
.github/workflows/: C-Mac.yml  c.yml
CMakeLists/apple/: CMakeLists.txt
CMakeLists/ios/: CMakeLists.txt
CMakeLists/linux/: CMakeLists.txt
CMakeLists/windows/: CMakeLists.txt
assets/: androidInstallationLogs.txt  demo.rml  foo.txt  fragment.glsl  invader.tga  localization.json  vertex.glsl  window.rml
assets/config/: android.json  android.yaml  desktop.json  desktop.yaml  ios.json  resources.json
assets/prefabs/: square.yaml
assets/scenes/: Editor.json  Editor.yaml  GDEDemo.json  Sandbox.yaml  SandboxAndroid.yaml
assets/shaders/: FlatColor.glsl  Texture.glsl
assets/shaders/debug/: debugVertex.glsl
assets/shaders/framebuffer/: FrameBufferVertex.glsl
assets/shaders/texture/: glowFragment.glsl  outlineFragment.glsl  textFragment.glsl  vertex.glsl
assets/sprites/: assets.json  assets.tps  ui2.json
config/: project.yaml
core/: Core.h  Engine.cpp  Engine.h
core/components/: Components.h
core/render/: Animation.cpp  Animation.h  Camera.cpp  Camera.h  Renderer.cpp  Renderer.h
core/systems/: Components.h  Profiler.cpp  Profiler.h  shader_utils.cpp  shader_utils.h
core/util/: Clock.cpp  Color.cpp  Color.h  Easing.h  Functions.h  Logger.h  Random.h  Rect.h  Time.cpp  Time.h  Util.h  Vec.h
defaultAssets/: assets.json  assets.tps  defaultAssets.json
demo/: GDEDemo.cpp  GDEDemo.h  GDEDemoEntry.cpp
docs/: Doxyfile  EngineDocs.md  api.rst  conf.py  index.rst  index_api.html  mkdocs.yml  setup.sh  setupDocumentation.sh
docs/config/: Project.txt
docs/docs/: build_system.md  how_it_works.md  index.md
docs/source/: api.rst  index.rst  usage.rst
editor/: ComponentHandler.cpp  Editor.cpp  Editor.h  EditorComponentsModule.cpp  EditorConsoleModule.cpp  EditorDockingspaceModule.cpp  EditorEntry.cpp  EditorGamePreview.cpp  EditorHierarchyModule.cpp  EditorMenuBarModule.cpp  EditorNodeContextMenuModule.cpp  EditorOverlappingSelectionModule.cpp  EditorSceneViewModule.cpp  EditorThemesModule.cpp  EditorToolBarModule.cpp  EditorToolsMenuModule.cpp  EditorViewSubmenuModule.cpp  NodeCreator.cpp  testFunctions.cpp
engine/: main.cpp  main.h
engine/include/: GDE.h  GDEEntry.h  RDE.h  RDEEntry.h  core.h  private_structs.h  rde.h  rde_config.h  structs.h
engine/src/: audio.c  errors.c  events.c  events.cpp  fbx_importer.c  file_system.c  file_system.cpp  main.cpp  math.c  math.cpp  mobile.c  obj_importer.c  physics.c  physics.cpp  physics_3d.c  private_structs.c  rde.c  rde.cpp  rendering.c  rendering.cpp  rendering_2d.c  rendering_3d.c  rendering_3d_default_meshes.c  rendering_common.c  util.c  window.c  window.cpp
examples/: android.c  another_shadow_frag.glsl  hierarchy.c  hub.c  hub.cpp  model_viewer.c  model_viewer.cpp  performance_test.c  performance_test.cpp  physics.c  shadows.c  ui.c
examples/libs/: rde_imgui.lib
libs/SDL_image/: CMakeLists.txt  SDL_image.h
libs/SDL_net/: Makefile  SDL2_net.pc  config.status  libtool
libs/box2d/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
libs/entt/: EnTTTargets.cmake  Makefile  cmake_install.cmake  entt.pc
libs/imgui/: imgui.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imstb_truetype.h
libs/yamlcpp/: CMakeCache.txt  Makefile  cmake_install.cmake
libs/yamlcpp/util/: read  (+4 more)
libs_out/: .ninja_deps  .ninja_log  build.ninja
nonVcpkgDeps/Chipmunk2D/: CMakeCache.txt  Makefile  cmake_install.cmake
projectBase/TestProjectEngine/: main.cpp
projectManager/: installer.sh
projectManager/androidInstallation/: 0.sh  1.sh  buildApk.sh  install.sh
projectManager/creationSteps/: projectCreator.sh
projectManager/firebaseInstallation/: install.sh  setupAndroid.sh
projectManager/installationSteps/: 0.sh  1.sh  2.sh  3.sh  4.sh  5.sh  6.sh
projectManager/projectBase/TestProjectEngine/: CMakeLists.txt  main.cpp
projectManager/projectBase/TestProjectEngine/assets/shaders/core/debug/: debugFragment.glsl  debugVertex.glsl
projectManager/projectBase/TestProjectEngine/assets/shaders/core/framebuffer/: FrameBufferFragment.glsl
projectManager/projectBase/TestProjectEngine/assets/shaders/core/texture/: bloomFragment.glsl  textFragment.glsl
projectManager/projectBase/TestProjectEngine/code/include/: TestLayer.h
projectManager/projectBase/TestProjectEngine/code/src/: TestLayer.cpp
projectManager/projectBase/TestProjectEngine/libs_out/: CMakeCache.txt  build.ninja  cmake_install.cmake
projectManager/projectBase/TestProjectEngine/libs_out/.cmake/api/v1/reply/: cache-v2-eccf5a350ef55c17094a.json  cmakeFiles-v1-188932cb125ce3c2ba2a.json  codemodel-v2-d6b2e29bb823223f505a.json  index-2022-03-01T23-56-57-0303.json  target-PLACEHOLDER-Release-764e293843cd3967f14b.json
sandbox/: Sandbox.cpp  Sandbox.h
targets/engineAndroid/: CMakeCache.txt  CMakeLists.txt  build.gradle  settings.gradle  setup.sh
test/: test.cpp
tests/: test_2d_draw.c  test_3d_draw.c  test_audio.c  test_dyn_array.c  test_engine.c  test_events.c  test_file_utils.c  test_font.c  test_math.c  test_obj.c  test_physics.c  test_run.c  test_string_utils.c  test_texture.c  test_utils.c
tools/atlas_generator/: atlas_generator.c  atlas_generator.cpp  build_unix.sh  build_windows.bat  test_dir_2.rde_atlas
tools/font_generator/: build_windows.bat  font_generator.c
tools/project_generator/: project_generator  project_generator.c
unitTesting/: HierarchyTest.cpp
(+1198 files in other folders)
